Make_Error_Output
make  all-recursive
make[1]: Entering directory `/home/users/mborrus/FRE-NCtools'
Making all in postprocessing/combine_blobs
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/combine_blobs'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/combine_blobs'
Making all in postprocessing/combine_restarts
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/combine_restarts'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/combine_restarts'
Making all in postprocessing/iceberg_comb
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/iceberg_comb'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/iceberg_comb'
Making all in postprocessing/land_utils
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/land_utils'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/land_utils'
Making all in postprocessing/list_ncvars
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/list_ncvars'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/list_ncvars'
Making all in postprocessing/mppnccombine
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/mppnccombine'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/mppnccombine'
Making all in postprocessing/plevel
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/plevel'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/plevel'
Making all in postprocessing/split_ncvars
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/split_ncvars'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/split_ncvars'
Making all in postprocessing/timavg
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/postprocessing/timavg'
make[2]: Nothing to be done for `all'.
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/postprocessing/timavg'
Making all in tools/libfrencutils
make[2]: Entering directory `/home/users/mborrus/FRE-NCtools/tools/libfrencutils'
gcc -DHAVE_CONFIG_H -I. -I../..    -I/share/software/user/open/netcdf/4.4.1.1/include -g -O2 -MT create_xgrid.o -MD -MP -MF .deps/create_xgrid.Tpo -c -o create_xgrid.o create_xgrid.c
In file included from create_xgrid.c:23:0:
create_xgrid.c: In function ‘clip_2dx2d’:
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:1313:12: note: in expansion of macro ‘fabs’
         if(fabs(determ) < EPSLN30) {
            ^
create_xgrid.c: In function ‘pimod’:
create_xgrid.c:1344:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int i=0;i<nn;i++) {
   ^
create_xgrid.c:1344:3: note: use option -std=c99 or -std=gnu99 to compile your code
In file included from create_xgrid.c:23:0:
create_xgrid.c: In function ‘line_intersect_2D_3D’:
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2000:6: note: in expansion of macro ‘fabs’
   if(fabs(*u_a) < EPSLN8) *u_a = 0;
      ^
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2001:6: note: in expansion of macro ‘fabs’
   if(fabs(*u_a-1) < EPSLN8) *u_a = 1;
      ^
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2028:6: note: in expansion of macro ‘fabs’
   if(fabs(*u_q) < EPSLN8) *u_q = 0;
      ^
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2029:6: note: in expansion of macro ‘fabs’
   if(fabs(*u_q-1) < EPSLN8) *u_q = 1;
      ^
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2045:6: note: in expansion of macro ‘fabs’
   if(fabs(coincident) < EPSLN30) return 0;
      ^
create_xgrid.c: In function ‘poly_ctrlat’:
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2107:10: note: in expansion of macro ‘fabs’
     if ( fabs(hdy)< SMALL_VALUE ) /* cheap area calculation along latitude */
          ^
create_xgrid.c: In function ‘poly_ctrlon’:
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2151:8: note: in expansion of macro ‘fabs’
     if(fabs(dphi2 -dphi1) < M_PI) {
        ^
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2159:39: note: in expansion of macro ‘fabs’
       fint = f1 + (f2-f1)*(fac-dphi1)/fabs(dphi);
                                       ^
create_xgrid.c: In function ‘box_ctrlon’:
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2219:8: note: in expansion of macro ‘fabs’
     if(fabs(dphi2 -dphi1) < M_PI) {
        ^
mosaic_util.h:34:6: error: expected expression before ‘long’
      long double: fabsl, \
      ^
create_xgrid.c:2227:39: note: in expansion of macro ‘fabs’
       fint = f1 + (f2-f1)*(fac-dphi1)/fabs(dphi);
                                       ^
make[2]: *** [create_xgrid.o] Error 1
make[2]: Leaving directory `/home/users/mborrus/FRE-NCtools/tools/libfrencutils'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/home/users/mborrus/FRE-NCtools'
make: *** [all] Error 2
